--- a/index.html
+++ b/index.html
@@ -8,19 +8,32 @@
 </head>
 <body>
 
-    <div id="container-big">
-        <div id="menu">
-            <button class="menu-button" onclick="location.href='index.html'">Sklep</button>
-            <button class="menu-button" onclick="location.href='index.html'">Dostawa</button>
-            <button class="menu-button" onclick="location.href='index.html'">Rejestracja</button>
+<div id="menu">
+    <button class="menu-button" onclick="location.href='index.html'">Sklep</button>
+    <button class="menu-button" onclick="location.href='index.html'">Dostawa</button>
+    <button class="menu-button" onclick="location.href='index.html'">Rejestracja</button>
+</div>
+
+<div id="przedmioty_koszyk">
+    <div id="przedmioty">
+        <div class="nowy_przedmiot">
+            <img alt="zdjecie" src="https://pbs.twimg.com/profile_images/446243429316456448/jkjQHhLA.jpeg">
+            <div class="nazwa_produktu">Nazwa produktu</div>
+            <div class="cena_dodaj">
+                <div class="cena">Cena</div>
+                <div class="dodaj">Dodaj</div>
+            </div>
         </div>
-
-
-
-        <div id="przedmioty"></div>
-        <div id="koszyk"></div>
     </div>
 
+
+<div id="koszyk">
+    <div>
+
+    </div>
+
+</div>
+</div>
 
 
 </body>
