--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
     </div>
 
 
-<div id="koszyk">
-    <div>
-
+    <div id="koszyk">
+        <div class="koszyk_menu">
+            <div class="kup_wyczysc">
+                <div class="kup">Kup</div>
+                <div class="wyczysc">Wyczyść</div>
+            </div>
+            <div class="cena_koszyka">Cena koszyka</div>
+            <div class="obszar_zakupu"></div>
+        </div>
     </div>
-
 </div>
-</div>
-
-
 </body>
 </html>
